--- a/index.html
+++ b/index.html
@@ -15,26 +15,148 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <!-- img d'accueil recouvrant tout l'écran -->
+        <img src="" alt="">
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        <!-- ecriture header -->
+        <header>
+          <H1></H1>
+          <nav>
+            <ul>
+              <li>Accueil</li>
+              <li>L'entreprise</li>
+              <li>Nos réalisations</li>
+              <li>Nos prestations</li>
+              <li>Notre équipe</li>
+              <li>Contact</li>
+              <li class="social">
+                <ul>
+                  <li><a href=""><i></i></a></li>
+                  <li><a href=""><i></i></a></li>
+                  <li><a href=""><i></i></a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+        </header>
+
+
+
+        <!-- ecriture main -->
+        <main>
+
+          <!-- ecriture d'une petite présentation de l'entreprise  -->
+          <section class="presentation">
+            <h2>Who we are</h2>
+            <video src="videofile.ogg" autoplay poster="posterimage.jpg">
+
+            </video>
+            <p></p>
+          </section>
+
+          <!-- ecriture de la rubrique des réalisations, ici on créera un carousel   -->
+          <section class="realisation">
+            <h2>Ils nous ont fait confiance</h2>
+            <div>
+              <img src="" alt="screenshot page d'accueil client 1">
+              <img src="" alt="screenshot page d'accueil client 2">
+              <img src="" alt="screenshot page d'accueil client 3">
+              <img src="" alt="screenshot page d'accueil client 4">
+              <img src="" alt="screenshot page d'accueil client 5">
+              <img src="" alt="screenshot page d'accueil client 6">
+              <img src="" alt="screenshot page d'accueil client 7">
+              <img src="" alt="screenshot page d'accueil client 8">
+              <img src="" alt="screenshot page d'accueil client 9">
+            </div>
+          </section>
+
+          <!-- ecriture de la rubrique des packages - pricing  -->
+          <section class="prestation">
+            <h2></h2>
+            <div>
+              <p>
+                <h3></h3>
+                <span></span>
+                <!-- on peut mettre du texte où on veut, étant donné que l'on se trouve dans un p -->
+                <button></button>
+              </p>
+
+              <p>
+                <h3></h3>
+                <span></span>
+                <button></button>
+              </p>
+
+              <p>
+                <h3></h3>
+                <span></span>
+                <button></button>
+              </p>
+
+              <p>
+                <h3></h3>
+                <span></span>
+                <button></button>
+              </p>
+            </div>
+          </section>
+
+          <!-- ecriture de la rubrique présentation de l'équipe  -->
+          <section class="equipe">
+            <h2></h2>
+            <div>
+              <figure>
+                <img src="" alt="Portrait dessin Leila">
+                <figcaption><span>Leila</span> | Maître de l'univers</figcaption>
+              </figure>
+              <figure>
+                <img src="" alt="Portrait dessin Farrah">
+                <figcaption><span>Farrah</span>  | dog sitter </figcaption>
+              </figure>
+            </div>
+          </section>
+
+          <!-- ecriture de la rubrique contact  -->
+          <section class="contact">
+            <h2></h2>
+            <div>
+              <form action="">
+
+                <label for=""></label>
+                <input type="text">
+
+                <label for=""></label>
+                <input type="text">
+
+                <label for=""></label>
+                <input type="text">
+
+                <label for=""></label>
+                <input type="text">
+
+                <label for=""></label>
+                <select name="" id="">
+                  <option value="prix">Prix</option>
+                  <option value="conseil">Conseil</option>
+                  <option value="sav">SAV</option>
+                  <option value="gueuler">Coup de gueule</option>
+                  <option value="compliment">Compliment</option>
+                </select>
+
+                <label for=""></label>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+
+                <input type="submit" value"envoyer">
+              </form>
+
+            </div>
+            <iframe src="" width="" height=""></iframe>
+          </section>
+
+        </main>
+
+
     </body>
 </html>
