--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Spotlight | Des idées lumineuses</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
 
         <!-- ecriture header -->
         <header>
-          <H1></H1>
+          <H1>Spotlight</H1>
           <nav>
             <ul>
               <li>Accueil</li>
