work on img header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <body>
 
         <!-- img d'accueil recouvrant tout l'écran -->
-        <img src="" alt="">
+        <div>
+         <img src="img/logo4.png" alt="ampoule éteinte" class="logo">
+        </div>
 
 
         <!-- ecriture header -->
