homepage : began the style and the animation - ligth on/off  + H1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <!-- img d'accueil recouvrant tout l'écran -->
         <div>
-         <img src="img/logo4.png" alt="ampoule éteinte" class="logo">
+          <div class="logo"></div>
         </div>
 
 
