--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <header>
           <H1>Spotlight</H1>
           <nav>
+            <!--here icon-->
             <ul>
               <li>Accueil</li>
               <li>L'entreprise</li>
