--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
           <!-- ecriture d'une petite présentation de l'entreprise  -->
           <section class="presentation">
-            <h2>Who we are</h2>
+            <h2><span>Spotlight</span> en quelques mots</h2>
+            <hr>
             <video src="videofile.ogg" autoplay poster="posterimage.jpg">
 
             </video>
@@ -61,7 +62,8 @@
 
           <!-- ecriture de la rubrique des réalisations, ici on créera un carousel   -->
           <section class="realisation">
-            <h2>Ils nous ont fait confiance</h2>
+            <h2>Ils nous ont fait <span>confiance</span></h2>
+            <hr>
             <div>
               <img src="" alt="screenshot page d'accueil client 1">
               <img src="" alt="screenshot page d'accueil client 2">
@@ -77,7 +79,8 @@
 
           <!-- ecriture de la rubrique des packages - pricing  -->
           <section class="prestation">
-            <h2></h2>
+            <h2>Les <span>prestations</span> proposées</h2>
+            <hr>
             <div>
               <p>
                 <h3></h3>
@@ -108,7 +111,8 @@
 
           <!-- ecriture de la rubrique présentation de l'équipe  -->
           <section class="equipe">
-            <h2></h2>
+            <h2>Une <span>équipe</span> brillante</h2>
+            <hr>
             <div>
               <figure>
                 <img src="" alt="Portrait dessin Leila">
@@ -123,7 +127,8 @@
 
           <!-- ecriture de la rubrique contact  -->
           <section class="contact">
-            <h2></h2>
+            <h2>Discutons de vos <span>projets</span></h2>
+            <hr>
             <div>
               <form action="">
 
