index.html: classe+links menu+icon hamburger added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Spotlight | Des idées lumineuses</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
@@ -25,24 +25,29 @@
         <!-- ecriture header -->
         <header>
           <H1>Spotlight</H1>
-          <nav>
-            <!--here icon-->
+        <div>
+          <input type="checkbox" id="burger-shower" class="burger-shower">
+          <label for="burger-shower" class="hamburger">
+           <i class="fa fa-bars" aria-hidden="true"></i>
+          </label>
+          <nav class="burger-menu">
             <ul>
-              <li>Accueil</li>
-              <li>L'entreprise</li>
-              <li>Nos réalisations</li>
-              <li>Nos prestations</li>
-              <li>Notre équipe</li>
-              <li>Contact</li>
+              <li><a href="#">Accueil |</a></li>
+              <li><a href="#">L'entreprise </a></li>
+              <li><a href="#">Nos réalisations |</a></li>
+              <li><a href="#">Nos prestations </a></li>
+              <li><a href="#">Notre équipe |</a></li>
+              <li><a href="#">Contact</a></li>
               <li class="social">
                 <ul>
-                  <li><a href=""><i></i></a></li>
-                  <li><a href=""><i></i></a></li>
-                  <li><a href=""><i></i></a></li>
+                  <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                  <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                  <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                 </ul>
               </li>
             </ul>
           </nav>
+        </div>
         </header>
 
 
