added pictures for portfolio section and style for mobile first for this section is done

--- a/index.html
+++ b/index.html
@@ -64,16 +64,19 @@
           <section class="realisation">
             <h2>Ils nous ont fait <span>confiance</span></h2>
             <hr>
-            <div>
-              <img src="" alt="screenshot page d'accueil client 1">
-              <img src="" alt="screenshot page d'accueil client 2">
-              <img src="" alt="screenshot page d'accueil client 3">
-              <img src="" alt="screenshot page d'accueil client 4">
-              <img src="" alt="screenshot page d'accueil client 5">
-              <img src="" alt="screenshot page d'accueil client 6">
-              <img src="" alt="screenshot page d'accueil client 7">
-              <img src="" alt="screenshot page d'accueil client 8">
-              <img src="" alt="screenshot page d'accueil client 9">
+            <div class="carousel">
+              <div class="carouselslide">
+
+                <img src="img/portfolio/entreprise1.jpg" alt="screenshot page d'accueil client 1">
+                <img src="img/portfolio/entreprise2.jpg" alt="screenshot page d'accueil client 2">
+                <img src="img/portfolio/entreprise3.jpg" alt="screenshot page d'accueil client 3">
+                <img src="img/portfolio/entreprise4.jpg" alt="screenshot page d'accueil client 4">
+                <img src="img/portfolio/entreprise5.jpg" alt="screenshot page d'accueil client 5">
+                <img src="img/portfolio/entreprise6.jpg" alt="screenshot page d'accueil client 6">
+                <img src="img/portfolio/entreprise7.jpg" alt="screenshot page d'accueil client 7">
+                <img src="img/portfolio/entreprise8.jpg" alt="screenshot page d'accueil client 8">
+                <img src="img/portfolio/entreprise9.jpg" alt="screenshot page d'accueil client 9">
+              </div>
             </div>
           </section>
 
