--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- ecriture header -->
         <header>
           <H1>Spotlight</H1>
-        <div>
+        <div class="menu">
           <input type="checkbox" id="burger-shower" class="burger-shower">
           <label for="burger-shower" class="hamburger">
            <i class="fa fa-bars" aria-hidden="true"></i>
