--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li><a href="#">Nos prestations </a></li>
               <li><a href="#">Notre équipe |</a></li>
               <li><a href="#">Contact</a></li>
-              <li class="social">
+              <li id="social">
                 <ul>
                   <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
