--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
             <hr>
             <div>
               <figure>
-                <img src="" alt="Portrait dessin Leila">
+                <img src="img/equipe/leila.png" alt="Portrait dessin Leila">
                 <figcaption><span>Leila</span> | Maître de l'univers</figcaption>
               </figure>
               <figure>
-                <img src="" alt="Portrait dessin Farrah">
+                <img src="img/equipe/farrah.png" alt="Portrait dessin Farrah">
                 <figcaption><span>Farrah</span>  | dog sitter </figcaption>
               </figure>
             </div>
