finished the team section

--- a/index.html
+++ b/index.html
@@ -124,11 +124,13 @@
             <div>
               <figure>
                 <img src="img/equipe/leila.png" alt="Portrait dessin Leila">
-                <figcaption><span>Leila</span> | Maître de l'univers</figcaption>
+                <figcaption><span>Leila </span> Co-fondatrice</figcaption>
+                <figcaption class="equipedetail">"Spécialiste front et graphisme, je m'occupe de votre design pour un rendu moderne et à votre image"</figcaption>
               </figure>
               <figure>
                 <img src="img/equipe/farrah.png" alt="Portrait dessin Farrah">
-                <figcaption><span>Farrah</span>  | dog sitter </figcaption>
+                <figcaption><span>Farrah </span> Co-fondatrice </figcaption>
+                <figcaption class="equipedetail">"Je bosse sur le back et l'ergonomie du site, afin d'optimiser l'expérience utilisateur"</figcaption>
               </figure>
             </div>
           </section>
