links menu position problem solved

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           </label>
           <nav class="burger-menu">
             <ul>
-              <li><a href="#">Accueil |</a></li>
+              <li><a href="#">Accueil </a></li>
               <li><a href="#">L'entreprise </a></li>
-              <li><a href="#">Nos réalisations |</a></li>
+              <li><a href="#">Nos réalisations </a></li>
               <li><a href="#">Nos prestations </a></li>
-              <li><a href="#">Notre équipe |</a></li>
+              <li><a href="#">Notre équipe </a></li>
               <li><a href="#">Contact</a></li>
               <li id="social">
                 <ul>
