index.html: wrote packages section

--- a/index.html
+++ b/index.html
@@ -91,28 +91,59 @@
             <hr>
             <div>
               <p>
-                <h3></h3>
-                <span></span>
-                <!-- on peut mettre du texte où on veut, étant donné que l'on se trouve dans un p -->
-                <button></button>
+                <h3>Basic</h3>
+                Formule basique.
+                <span>Basic</span>
+                Dans ce forfait :
+                <ul>
+                  <li>Etudes des besoins</li>
+                  <li>Conseils</li>
+                  <li>Méthodologie de travail</li>
+                  <li>Identité visuelle</li>
+                </ul>
+                <button>Essayez gratuitement</button>
               </p>
 
               <p>
-                <h3></h3>
-                <span></span>
-                <button></button>
+                <h3>Starter</h3>
+                Pour les jeunes marques et indépendants.
+                <span>Débutant</span>
+                Dans ce forfait :
+                <ul>
+                  <li>Conseils</li>
+                  <li>Méthodologie de travail</li>
+                  <li>Création de site internet</li>
+                  <li>Audit de site web</li>
+                </ul>
+                <button>Devis</button>
               </p>
 
               <p>
-                <h3></h3>
-                <span></span>
-                <button></button>
+                <h3>Pro</h3>
+                Business en croissance.
+                <span>Intermédiaire</span>
+                Dans ce forfait :
+                <ul>
+                  <li>Conseils et gestion de projet</li>
+                  <li>Création de site internet</li>
+                  <li>Optimisation du référencement naturel</li>
+                  <li>Développement spécifique</li>
+                </ul>
+                <button>Devis</button>
               </p>
 
               <p>
-                <h3></h3>
-                <span></span>
-                <button></button>
+                <h3>Entreprise</h3>
+                Sites e-commerce confirmés.
+                <span>Expert</span>
+                Dans ce forfait :
+                <ul>
+                  <li>Conseils et audit</li>
+                  <li>Identité de marque</li>
+                  <li>Services web</li>
+                  <li>Marketing web</li>
+                </ul>
+                <button>Devis</button>
               </p>
             </div>
           </section>
