index.html: packages section; replace div with articles with classes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <section class="prestation">
             <h2>Les <span>prestations</span> proposées</h2>
             <hr>
-            <div>
+            <article class="packages">
               <p>
                 <h3>Basic</h3>
                 Formule basique.
@@ -103,7 +103,9 @@
                 </ul>
                 <button>Essayez gratuitement</button>
               </p>
+            </article>
 
+            <article class="packages">
               <p>
                 <h3>Starter</h3>
                 Pour les jeunes marques et indépendants.
@@ -117,7 +119,9 @@
                 </ul>
                 <button>Devis</button>
               </p>
+            </article>
 
+            <article class="packages">
               <p>
                 <h3>Pro</h3>
                 Business en croissance.
@@ -131,7 +135,9 @@
                 </ul>
                 <button>Devis</button>
               </p>
+            </article>
 
+            <article class="packages">
               <p>
                 <h3>Entreprise</h3>
                 Sites e-commerce confirmés.
@@ -145,7 +151,8 @@
                 </ul>
                 <button>Devis</button>
               </p>
-            </div>
+            </article>
+            
           </section>
 
           <!-- ecriture de la rubrique présentation de l'équipe  -->
