index.html: skeleton of section prestation changed

--- a/index.html
+++ b/index.html
@@ -89,70 +89,63 @@
           <section class="prestation">
             <h2>Les <span>prestations</span> proposées</h2>
             <hr>
+          <div>
             <article class="packages">
-              <p>
                 <h3>Basic</h3>
-                Formule basique.
-                <span>Basic</span>
-                Dans ce forfait :
+                <p>Formule basique.</p><br>
+                <span>Basic</span><br>
                 <ul>
-                  <li>Etudes des besoins</li>
-                  <li>Conseils</li>
-                  <li>Méthodologie de travail</li>
-                  <li>Identité visuelle</li>
+                  <li><em>Dans ce forfait :</em></li>
+                  <li> Etudes des besoins</li>
+                  <li> Conseils</li>
+                  <li> Méthodologie de travail</li>
+                  <li> Identité visuelle</li>
                 </ul>
                 <button>Essayez gratuitement</button>
-              </p>
             </article>
 
             <article class="packages">
-              <p>
                 <h3>Starter</h3>
-                Pour les jeunes marques et indépendants.
-                <span>Débutant</span>
-                Dans ce forfait :
+                <p>Pour les jeunes marques et indépendants.</p><br>
+                <span>Débutant</span><br>
                 <ul>
-                  <li>Conseils</li>
-                  <li>Méthodologie de travail</li>
-                  <li>Création de site internet</li>
-                  <li>Audit de site web</li>
+                  <li><em>Dans ce forfait :</em></li>
+                  <li> Conseils</li>
+                  <li> Méthodologie de travail</li>
+                  <li> Création de site internet</li>
+                  <li> Audit de site web</li>
                 </ul>
                 <button>Devis</button>
-              </p>
             </article>
 
             <article class="packages">
-              <p>
                 <h3>Pro</h3>
-                Business en croissance.
-                <span>Intermédiaire</span>
-                Dans ce forfait :
+                <p>Business en croissance.</p><br>
+                <span>Intermédiaire</span><br>
                 <ul>
-                  <li>Conseils et gestion de projet</li>
-                  <li>Création de site internet</li>
-                  <li>Optimisation du référencement naturel</li>
-                  <li>Développement spécifique</li>
+                  <li><em>Dans ce forfait :</em></li>
+                  <li> Conseils et gestion de projet</li>
+                  <li> Création de site internet</li>
+                  <li> Optimisation du référencement naturel</li>
+                  <li> Développement spécifique</li>
                 </ul>
                 <button>Devis</button>
-              </p>
             </article>
 
             <article class="packages">
-              <p>
                 <h3>Entreprise</h3>
-                Sites e-commerce confirmés.
-                <span>Expert</span>
-                Dans ce forfait :
+                <p>Sites e-commerce confirmés.</p><br>
+                <span>Expert</span><br>
                 <ul>
-                  <li>Conseils et audit</li>
-                  <li>Identité de marque</li>
-                  <li>Services web</li>
-                  <li>Marketing web</li>
+                  <li><em>Dans ce forfait :</em></li>
+                  <li> Conseils et audit</li>
+                  <li> Identité de marque</li>
+                  <li> Services web</li>
+                  <li> Marketing web</li>
                 </ul>
                 <button>Devis</button>
-              </p>
             </article>
-            
+           </div>
           </section>
 
           <!-- ecriture de la rubrique présentation de l'équipe  -->
