list items changed

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <span>Basic</span><br>
                 <ul>
                   <li><em>Dans ce forfait :</em></li>
-                  <li> Etudes des besoins</li>
+                  <li> Études des besoins</li>
                   <li> Conseils</li>
                   <li> Méthodologie de travail</li>
                   <li> Identité visuelle</li>
@@ -124,10 +124,10 @@
                 <span>Intermédiaire</span><br>
                 <ul>
                   <li><em>Dans ce forfait :</em></li>
-                  <li> Conseils et gestion de projet</li>
+                  <li> Conseils et gestion projet</li>
                   <li> Création de site internet</li>
-                  <li> Optimisation du référencement naturel</li>
-                  <li> Développement spécifique</li>
+                  <li> Optimisation du SEO</li>
+                  <li> Développement</li>
                 </ul>
                 <button>Devis</button>
             </article>
