wrote contact section

--- a/index.html
+++ b/index.html
@@ -173,19 +173,15 @@
             <div>
               <form action="">
 
-                <label for=""></label>
-                <input type="text">
+                <label><input type="text" placeholder="Nom &amp; Prénom"></label>
 
-                <label for=""></label>
-                <input type="text">
+                <label><input type="text" placeholder="Société" required></label>
 
-                <label for=""></label>
-                <input type="text">
+                <label><input type="tel" placeholder="Numéro" required></label>
 
-                <label for=""></label>
-                <input type="text">
+                <label><input type="email" placeholder="Email" required></label>
 
-                <label for=""></label>
+                <label for="">
                 <select name="" id="">
                   <option value="prix">Prix</option>
                   <option value="conseil">Conseil</option>
@@ -193,9 +189,11 @@
                   <option value="gueuler">Coup de gueule</option>
                   <option value="compliment">Compliment</option>
                 </select>
+                </label>
 
-                <label for=""></label>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <label>
+                  <textarea name="" id="" cols="30" rows="10" placeholder="Votre question..."></textarea>
+                </label>
 
                 <input type="submit" value"envoyer">
               </form>
