--- a/index.html
+++ b/index.html
@@ -204,15 +204,14 @@
                 <li>Tel: 0320693664</li>
                 <li>Fax: 0320745986</li>
                 <li><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></li>
-                <li>contact.spotlight.fr</li>
+                <li>contact@spotlight.fr</li>
                 <li><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></li>
                 <li>1600 Amphitheatre Parkway</li>
                 <li>Mountain View, Californie</li>
               </ul>
               </div>
-              <div>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.623790155075!2d-122.08613318469254!3d37.422366179825154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fba027f087f8f%3A0xd86b06710e8fcc35!2sGoogle+Bldg+40%2C+1600+Amphitheatre+Pkwy%2C+Mountain+View%2C+CA+94043%2C+%C3%89tats-Unis!5e0!3m2!1sfr!2sfr!4v1494169311971" width="600" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
-            </div>
+              
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.623790155075!2d-122.08613318469254!3d37.422366179825154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fba027f087f8f%3A0xd86b06710e8fcc35!2sGoogle+Bldg+40%2C+1600+Amphitheatre+Pkwy%2C+Mountain+View%2C+CA+94043%2C+%C3%89tats-Unis!5e0!3m2!1sfr!2sfr!4v1494169311971" width="600" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
 
           </section>
 
