finished section presentation for all devices tablet smartphone and desktop

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           <section class="presentation" id="presentation">
             <h2><span>Spotlight</span> en quelques mots</h2>
             <hr>
-            <video src="videofile.ogg" autoplay poster="posterimage.jpg">
-
-            </video>
-            <p></p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/I9UEubO29Zw" frameborder="0" allowfullscreen></iframe>
+            <p>Créée en 2017, notre agence est née d'une rencontre, blablabla, composée de spécialistes dans chacun des domaines du web. <br><br>
+            Basée à Roubaix, <span>Spotlight</span> allie qualité et proximité pour des idées toujours plus lumineuses.
+            </p>
           </section>
 
           <!-- ecriture de la rubrique des réalisations, ici on créera un carousel   -->
