changed the color of nav bar for desktop, and fixed 2,3 bugs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- ecriture header -->
         <header>
-          <H1>Spotlight</H1>
+          <H1><a href="#presentation">Spotlight</a></H1>
         <div class="menu">
           <input type="checkbox" id="burger-shower" class="burger-shower">
           <label for="burger-shower" class="hamburger">
