--- a/index.html
+++ b/index.html
@@ -73,14 +73,70 @@
               <div class="carouselslide">
 
                 <img src="img/portfolio/entreprise1.jpg" alt="screenshot page d'accueil client 1">
+                <p>
+                  <span>Guigette</span> <br>
+                  Refonte de site vitrine <br>
+                  1500€ <br>
+                  2 semaines
+                </p>
                 <img src="img/portfolio/entreprise2.jpg" alt="screenshot page d'accueil client 2">
+                <p>
+                  <span>Chambre Kids</span> <br>
+                  Conception identité visuelle <br>
+                  500€ <br>
+                  3 jours
+                </p>
                 <img src="img/portfolio/entreprise3.jpg" alt="screenshot page d'accueil client 3">
+                <p>
+                  <span>Delile</span> <br>
+                  Conseil et application SEO <br>
+                  500€ <br>
+                  1 semaine
+                </p>
                 <img src="img/portfolio/entreprise4.jpg" alt="screenshot page d'accueil client 4">
+                <p>
+                  <span>Idées Plein Table</span> <br>
+                  Migration vers solution prestashop <br>
+                  2500€ <br>
+                  3 semaines
+                </p>
                 <img src="img/portfolio/entreprise5.jpg" alt="screenshot page d'accueil client 5">
+                <p>
+                  <span>Domiciliations</span> <br>
+                  Création site vitrine <br>
+                  1200€ <br>
+                  10 jours
+                </p>
                 <img src="img/portfolio/entreprise6.jpg" alt="screenshot page d'accueil client 6">
+                <p>
+                  <span>Eugène</span> <br>
+                  Accompagnement site e-commerce <br>
+                  3500€ <br>
+                  3 semaines
+                </p>
                 <img src="img/portfolio/entreprise7.jpg" alt="screenshot page d'accueil client 7">
+                <p>
+                  <span>Eurodif</span> <br>
+                  Création E-commerce et maintenanceRefonte de site vitrine <br>
+                  5500€ <br>
+                  ...
+                </p>
                 <img src="img/portfolio/entreprise8.jpg" alt="screenshot page d'accueil client 8">
+                <p>
+                  <span>Grégory Couranceau</span> <br>
+                  Création de site vitrine <br>
+                  Identité visuelle <br>
+                  2000€ <br>
+                  2 semaines
+                </p>
                 <img src="img/portfolio/entreprise9.jpg" alt="screenshot page d'accueil client 9">
+                <p>
+                  <span>Ile de Ré</span> <br>
+                  Gestion de projet <br>
+                  4500€ <br>
+                  5 semaines
+                </p>
+              </div>
               </div>
             </div>
           </section>
