--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                   <textarea name="text" placeholder="Votre message..."></textarea>
                 </label>
 
-                <input type="submit" name="bouton" value"envoyer">
+                <input type="submit" name="bouton" value="envoyer">
 
               </form>
 
@@ -267,7 +267,7 @@
               </ul>
               </div>
 
-               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.623790155075!2d-122.08613318469254!3d37.422366179825154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fba027f087f8f%3A0xd86b06710e8fcc35!2sGoogle+Bldg+40%2C+1600+Amphitheatre+Pkwy%2C+Mountain+View%2C+CA+94043%2C+%C3%89tats-Unis!5e0!3m2!1sfr!2sfr!4v1494169311971" width="600" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.623790155075!2d-122.08613318469254!3d37.422366179825154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fba027f087f8f%3A0xd86b06710e8fcc35!2sGoogle+Bldg+40%2C+1600+Amphitheatre+Pkwy%2C+Mountain+View%2C+CA+94043%2C+%C3%89tats-Unis!5e0!3m2!1sfr!2sfr!4v1494169311971" width="600" height="450" style="border:0" allowfullscreen=""></iframe>
 
           </section>
 
