--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                   <textarea name="text" placeholder="Votre message..."></textarea>
                 </label>
 
-                <input type="submit" name="bouton" value="envoyer">
+                <input type="submit" name="bouton" value="Envoyer">
 
               </form>
 
